--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -122,7 +122,7 @@ padding-bottom: 60px;
 }
 
 .foto-proyect1{
-background-image:url(../img/ux.jpg);
+background-image:url(../img/bustrack.png);
 background-position: center center;
 background-size: cover;
 height: 200px;
@@ -142,7 +142,7 @@ padding-bottom: 60px;
 }
 
 .foto-proyect2{
-background-image:url(../img/ux.jpg);
+background-image:url(../img/m-bank.png);
 background-position: center center;
 background-size: cover;
 height: 200px;
@@ -161,7 +161,7 @@ padding-bottom: 60px;
 }
 
 .foto-proyect3{
-background-image:url(../img/ux.jpg);
+background-image:url(../img/womanlive.png);
 background-position: center center;
 background-size: cover;
 height: 200px;
